--- a/training_demo/training/ssd_mobilenet_v2_aon.config
+++ b/training_demo/training/ssd_mobilenet_v2_aon.config
@@ -174,7 +174,7 @@ train_input_reader: {
   tf_record_input_reader {
     input_path: "../pre-trained-model/ssd_mobilenet_v2_coco_2018_03_29/model.ckpt.data-00000-of-00001"
   }
-  label_map_path: "../../annotations/label_map.pbtxt"
+  label_map_path: "/content/gdrive/My Drive/dooble/private_project/annotations/label_map.pbtxt"
 }
 
 eval_config: {
@@ -188,7 +188,7 @@ eval_input_reader: {
   tf_record_input_reader {
     input_path: "../pre-trained-model/mscoco_val.record-?????-of-00010"
   }
-  label_map_path: "../../annotations/label_map.pbtxt"
+  label_map_path: "/content/gdrive/My Drive/dooble/private_project/annotations/label_map.pbtxt"
   shuffle: false
   num_readers: 1
 }
