--- a/training_demo/training/ssd_mobilenet_v2_aon.config
+++ b/training_demo/training/ssd_mobilenet_v2_aon.config
@@ -153,8 +153,8 @@ train_config: {
       epsilon: 1.0
     }
   }
-  fine_tune_checkpoint: "/content/gdrive/My Drive/dooble/private_project/training_demo/pre-trained-model/ssd_mobilenet_v2_coco_2018_03_29/model.ckpt"
-  fine_tune_checkpoint_type:  "detection"
+  #fine_tune_checkpoint: "/content/gdrive/My Drive/dooble/private_project/training_demo/pre-trained-model/ssd_mobilenet_v2_coco_2018_03_29/model.ckpt"
+  #fine_tune_checkpoint_type:  "detection"
   # Note: The below line limits the training process to 200K steps, which we
   # empirically found to be sufficient enough to train the pets dataset. This
   # effectively bypasses the learning rate schedule (the learning rate will
@@ -172,7 +172,7 @@ train_config: {
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "/content/gdrive/My Drive/dooble/private_project/training_demo/pre-trained-model/ssd_mobilenet_v2_coco_2018_03_29/model.ckpt.data-00000-of-00001"
+    input_path: "/content/gdrive/My Drive/dooble/private_project/training_demo/model_train.record"
   }
   label_map_path: "/content/gdrive/My Drive/dooble/private_project/annotations/label_map.pbtxt"
 }
@@ -186,7 +186,7 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "/content/gdrive/My Drive/dooble/private_project/training_demo/pre-trained-model/ssd_mobilenet_v2_coco_2018_03_29/mscoco_val.record-?????-of-00010"
+    input_path: "/content/gdrive/My Drive/dooble/private_project/training_demo/model_val.record"
   }
   label_map_path: "/content/gdrive/My Drive/dooble/private_project/annotations/label_map.pbtxt"
   shuffle: false
