add pre trained model and cfg

--- a/training_demo/training/ssd_mobilenet_v2_aon.config
+++ b/training_demo/training/ssd_mobilenet_v2_aon.config
@@ -6,7 +6,8 @@
 
 model {
   ssd {
-    num_classes: 90
+    # it is explained on github that num_classes must be adapted to the data we want to train on
+    num_classes: 57
     box_coder {
       faster_rcnn_box_coder {
         y_scale: 10.0
@@ -172,6 +173,8 @@ train_config: {
 
 train_input_reader: {
   tf_record_input_reader {
+    #TODO: Check if this the record file that we are creating in a previous step
+
     input_path: "/content/gdrive/My Drive/dooble/private_project/annotations/train.record"
   }
   label_map_path: "/content/gdrive/My Drive/dooble/private_project/annotations/label_map.pbtxt"
@@ -186,6 +189,7 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
+    #TODO: Check if this the record file that we are creating in a previous step
     input_path: "/content/gdrive/My Drive/dooble/private_project/annotations/test.record"
   }
   label_map_path: "/content/gdrive/My Drive/dooble/private_project/annotations/label_map.pbtxt"
