--- a/training_demo/training/ssd_mobilenet_v2_aon.config
+++ b/training_demo/training/ssd_mobilenet_v2_aon.config
@@ -6,7 +6,8 @@
 
 model {
   ssd {
-    # it is explained on github that num_classes must be adapted to the data we want to train on
+    # it is explained on github that num_classes must be adapted to the data we want to train on.
+    # a training, with the value 57 worked once (training without checkpoint reuse)
     num_classes: 57
     box_coder {
       faster_rcnn_box_coder {
