--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/Alexandre/anaconda3/bin/python"
+    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\envs\\tensorflow_115\\python.exe"
 }
