--- a/training_demo/training/ssd_mobilenet_v2_apn.config
+++ b/training_demo/training/ssd_mobilenet_v2_apn.config
@@ -168,8 +168,18 @@ train_config: {
   }
   data_augmentation_options {
     ssd_random_crop {
+    }   
+  }
+  data_augmentation_options {
+    random_horizontal_flip {
     }
   }
+data_augmentation_options {
+  random_rotation90 {
+    
+  }
+
+}
 }
 
 train_input_reader: {
