add files from colab

--- a/training_demo/fine_tuned_model/pipeline.config
+++ b/training_demo/fine_tuned_model/pipeline.config
@@ -131,13 +131,21 @@ model {
   }
 }
 train_config {
-  batch_size: 24
+  batch_size: 64
   data_augmentation_options {
     random_horizontal_flip {
     }
   }
   data_augmentation_options {
     ssd_random_crop {
+    }
+  }
+  data_augmentation_options {
+    random_horizontal_flip {
+    }
+  }
+  data_augmentation_options {
+    random_rotation90 {
     }
   }
   optimizer {
