add more data augmenation options

--- a/training_demo/training/ssd_mobilenet_v2_quantized_300x300_coco.config
+++ b/training_demo/training/ssd_mobilenet_v2_quantized_300x300_coco.config
@@ -176,9 +176,21 @@ train_config: {
   }
 data_augmentation_options {
   random_rotation90 {
-
   }
 }
+
+
+data_augmentation_options {
+  random_rgb_to_gray {
+  }
+}
+
+data_augmentation_options {
+  random_adjust_brightness {
+  }
+}
+
+
 }
 train_input_reader: {
   tf_record_input_reader {
